Updated reset button location, fixed styling problems in dashboard, fixed registration page not showing bug

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -1,9 +1,3 @@
-body {
-  padding-top: 4.2rem;
-  padding-bottom: 4.2rem;
-  background: rgba(0, 0, 0, 0.76);
-}
-
 a {
   text-decoration: none !important;
 }
