--- a/public/css/main.css
+++ b/public/css/main.css
@@ -215,6 +215,10 @@ select {
   padding-left: 10px;
 }
 
+#resetBtn {
+    margin-left: 2%;
+}
+
 #select2 {
   border: 1px solid #777;
   color: #999;
